<!--
 Copyright (c) 2017 Qualcomm Technologies, Inc.
 All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->
<resources>
    <string name="app_name">SVR Service</string>
    <string name="page_title_controller_settings">Controller Settings</string>
    <string name="page_title_controller_debug">Controller Debug</string>
    <string name="page_title_svr_config">SVR Config</string>
    <string name="connection_btn_connect">CONNECT</string>
    <string name="connection_btn_connecting">CONNECTING</string>
    <string name="connection_btn_disconnect">DISCONNECT</string>
    <string name="connection_btn_disconnecting">DISCONNECTING</string>
    <!-- controller_btns should match with SvrControllerButton definition-->
    <string-array name="controller_btns">
        <item>ONE</item>
        <item>TWO</item>
        <item>THREE</item>
        <item>FOUR</item>
        <item>DPAD_UP</item>
        <item>DPAD_DOWN</item>
        <item>DPAD_LEFT</item>
        <item>DPAD_RIGHT</item>
        <item>BACK</item>
        <item>START</item>
        <item>RESERVED_A</item>
        <item>RESERVED_B</item>
        <item>PRIMARY_SHOULDER</item>
        <item>TRIGGER</item>
        <item>PRIMARY_HAND_TRIGGER</item>
        <item>PRIMARY_THUMBSTICK</item>
        <item>PRIMARY_THUMBSTICK_UP</item>
        <item>PRIMARY_THUMBSTICK_DOWN</item>
        <item>PRIMARY_THUMBSTICK_LEFT</item>
        <item>PRIMARY_THUMBSTICK_RIGHT</item>
        <item>SECONDARY_SHOULDER</item>
        <item>SECONDARY_INDEX_TRIGGER</item>
        <item>SECONDARY_HAND_TRIGGER</item>
        <item>SECONDARY_THUMBSTICK</item>
        <item>SECONDARY_THUMBSTICK_UP</item>
        <item>SECONDARY_THUMBSTICK_DOWN</item>
        <item>SECONDARY_THUMBSTICK_LEFT</item>
        <item>SECONDARY_THUMBSTICK_RIGHT</item>
        <item>UP</item>
        <item>DOWN</item>
        <item>LEFT</item>
        <item>RIGHT</item>
    </string-array>
    <string name="controller_touchpad_touch">TOUCH</string>
    <string name="controller_touchpad_clicked">CLICKED</string>
    <string name="controller_touchpad_up">UP</string>
    <string name="controller_touchpad_down">DOWN</string>
    <string name="controller_touchpad_left">LEFT</string>
    <string name="controller_touchpad_right">Right</string>
    <string name="battery_tag">Battery:</string>
    <string name="rotation_tag">Rotation:</string>
    <string name="position_tag">Position:</string>
    <string name="accelerometer_tag">Accelerometer:</string>
    <string name="gyroscope_tag">Gyroscope:</string>
    <string name="button_pressed_tag">Button pressed:</string>
    <string name="touchpad_tag">TouchPad:</string>
</resources>
