<!--
 Copyright (c) 2017 Qualcomm Technologies, Inc.
 All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qualcomm.snapdragonvrservice.SettingsActivity">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:visibility="invisible"
        android:text="Debug controller data"/>
    <Spinner
        android:id="@+id/controller_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp" />
    <Button
        android:id="@+id/connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/controller_spinner"
        android:layout_toRightOf="@id/controller_spinner"
        android:layout_marginLeft="5dp"
        android:text=""/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/controller_spinner">
        <TextView
            android:id="@+id/battery_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/battery_tag"/>
        <TextView
            android:id="@+id/battery_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/battery_tag"
            android:layout_alignBottom="@id/battery_tag"
            android:text=""/>
        <TextView
            android:id="@+id/rotation_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/battery_tag"
            android:text="@string/rotation_tag"/>
        <TextView
            android:id="@+id/rotation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/rotation_tag"
            android:layout_alignBottom="@id/rotation_tag"
            android:text=""/>
        <TextView
            android:id="@+id/position_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/rotation_tag"
            android:text="@string/position_tag"/>
        <TextView
            android:id="@+id/position_value"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/position_tag"
            android:layout_alignBottom="@id/position_tag"
            android:text=""/>
        <TextView
            android:id="@+id/acc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/position_tag"
            android:text="@string/accelerometer_tag"/>
        <TextView
            android:id="@+id/acc_value"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/acc_tag"
            android:layout_alignBottom="@id/acc_tag"/>
        <TextView
            android:id="@+id/gyr_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/acc_tag"
            android:text="@string/accelerometer_tag"/>
        <TextView
            android:id="@+id/gyr_value"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/gyr_tag"
            android:layout_alignBottom="@id/gyr_tag"/>
        <TextView
            android:id="@+id/buttons_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/gyr_tag"
            android:text="@string/button_pressed_tag"/>
        <TextView
            android:id="@+id/buttons_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttons_tag"
            android:layout_alignBottom="@id/buttons_tag"/>
        <TextView
            android:id="@+id/touchpad_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/buttons_tag"
            android:text="@string/touchpad_tag"/>
        <TextView
            android:id="@+id/touchpad_value"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/touchpad_tag"
            android:layout_alignBottom="@id/touchpad_tag"/>
    </RelativeLayout>


</RelativeLayout>
